# Uni-Training

./: BitwiseLoop2.c  CMakeLists.txt  CommaOp.c  StaticCheat.c  extern1.c  test.c
3/: CMakeLists.txt  Dec2Bin.c
4/: CMakeLists.txt  IndRecur.c  Lc11.c  Lc84Stack.cpp  Lc84Stack.java  SlidingWindowSumKn.c  SlidingWindowSumN.c  StrReverse.c  clean.py
4/files/: clean.csv
C/: BitwiseCond.c  CMakeLists.txt  Pointers.c
C/sdb/: Main.c  S1.c  S1.h
Semester-3/: CMakeLists.txt  Dec2Bin.c  TargetSum.c
Semester-3/sdb/: S1.c
Semester-4/: CMakeLists.txt  Kadane.c  README.md  StrReverse.c
src/3/: CommaOp.c  Files.c  Formats.c  IndianCoins.c  LeftShift.c  Recursion.c  RegisterAddr.c  SecondLargest.c
src/3/sdb/: S1.h
src/4/: ArraySubsetsRecursive.c  BSearch.c  Fibonacci.c  Lc11.c  Lc84Stack.java  README.md  SlidingWindowSumExact.c  SlidingWindowSumMaxSubArray.c  SlidingWindowSumN.c  a.c
src/4/java/: ArraySubsetsRecursive.java  NextGreater.java
