cmake_minimum_required(VERSION 3.31.6)
project(Uni-C-Assignments)

add_executable(RtlL RtlL.c)
add_executable(Files Files.c)
add_executable(CommaOp CommaOp.c)
add_executable(Formats Formats.c)
add_executable(LeftShift LeftShift.c)
add_executable(BitwiseCond BitwiseCond.c)
add_executable(StaticCheat StaticCheat.c)
add_executable(Extern Extern1.c Extern2.c)
add_executable(ScopeProblem ScopeProblem.c)
add_executable(RegisterAddr RegisterAddr.c)
add_executable(BitwiseLoop2 BitwiseLoop2.c)
